--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:theme="@style/Theme.CulTourApp"
         tools:targetApi="31">
         <activity
-            android:name=".loginPage.LoginActivity"
+            android:name=".view.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.LoginActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
